# qglm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  q16_16_glm.h  q24_8_glm.h  q8_24_glm.h  qglm.h
fixed/: q16_16.h  q24_8.h  q8_24.h  q_arithmetic_template.h  q_comparison_template.h  q_conversion_template.h  q_epsilon_template.h  q_exp_template.h  q_fast_math_template.h  q_inv_tri_template.h  q_log_template.h  q_root_template.h  q_template.h  q_tri_template.h  q_util_template.h
geometry/: plane.h  q16_16_geometry.h  q24_8_geometry.h  q8_24_geometry.h  q_aabb_template.h  q_collision_template.h  q_intersection_template.h  q_plane_template.h  q_ray_template.h  q_sphere_template.h  q_triangle_template.h  ray.h  sphere.h  triangle.h
matrix/: q16_16_mat.h  q16_16_mat2.h  q16_16_mat2x3.h  q16_16_mat2x4.h  q16_16_mat3.h  q16_16_mat3x2.h  q16_16_mat3x4.h  q16_16_mat4.h  q16_16_mat4x2.h  q16_16_mat4x3.h  q24_8_mat.h  q8_24_mat.h  q_mat2_template.h  q_mat2x3_template.h  q_mat2x4_template.h  q_mat3_template.h  q_mat3x2_template.h  q_mat3x4_template.h  q_mat4_template.h  q_mat4x2_template.h  q_mat4x3_template.h  q_mat_cast_template.h  q_mat_mul_template.h  q_mat_tr_template.h
quat/: q16_16_quat.h  q24_8_quat.h  q8_24_quat.h  q_quat_template.h
transformation/: projection.h  q16_16_transformation.h  q24_8_transformation.h  q8_24_transformation.h  q_homogeneous_template.h  q_projection_template.h  q_transform_2d_template.h  q_transform_3d_template.h  q_view_template.h  q_viewport_template.h  view.h  viewport.h
vector/: q16_16_vec.h  q16_16_vec2.h  q16_16_vec3.h  q16_16_vec4.h  (+5 more)
